--- a/spedition/SpeditionClient/app/src/main/res/layout/activity_report_show.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/activity_report_show.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#F4B7B7"
     android:overScrollMode="always"
     android:scrollbars="vertical"
     tools:context=".activity.ReportEdit">
@@ -93,7 +92,7 @@
         app:layout_constraintTop_toBottomOf="@+id/productSpinner" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/lealeTimeContainer"
+        android:id="@+id/leaveTimeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,7 +145,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lealeTimeContainer">
+        app:layout_constraintTop_toBottomOf="@+id/leaveTimeContainer">
 
         <TextView
             android:id="@+id/textView11"
@@ -215,6 +214,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/expensesContainer" />
