--- a/spedition/SpeditionClient/app/src/main/res/layout/expenses_dialog.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/expenses_dialog.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@+id/expensesList"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="140dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,8 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/expensesList" />
+        app:layout_constraintTop_toBottomOf="@+id/expensesList"
+        android:importantForAutofill="no" />
 
     <TextView
         android:id="@+id/textView18"
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/expenses_description"
+        android:labelFor="@id/descriptionEdit"
         app:layout_constraintBottom_toBottomOf="@+id/descriptionEdit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/descriptionEdit" />
@@ -41,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/expenses_amount"
+        android:labelFor="@id/amountEdit"
         app:layout_constraintBottom_toBottomOf="@+id/amountEdit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/amountEdit" />
@@ -50,10 +53,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/addExpenses"
@@ -65,6 +68,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@android:drawable/divider_horizontal_dark"
+        android:contentDescription="@string/add"
         app:layout_constraintBottom_toBottomOf="@+id/amountEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/amountEdit"
