--- a/spedition/SpeditionClient/app/src/main/res/layout/report_list_row.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/report_list_row.xml
@@ -60,6 +60,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/check"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
