--- a/server/src/main/webapp/css/Application.css
+++ b/server/src/main/webapp/css/Application.css
@@ -288,7 +288,26 @@ input.error {
     box-shadow: 0 0 4px 2px gray;
 }
 .body-table {
-    border-collapse: collapse;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+}
+.navigation-panel{
+    display: flex;
+    flex-direction: column;
+}
+.content{
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+.content-holder{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    border-left: solid gray 1px;
 }
 .underlined{
     text-decoration: underline;
@@ -318,4 +337,28 @@ input.error {
 }
 .code-valid{
     color: green;
+}
+.full-page{
+    width: 100%;
+    height: 100%;
+}
+.page-column{
+    flex: 1 0 auto;
+}
+.page-content{
+
+}
+.tab{
+    border: solid gray 1px;
+    border-bottom: none;
+    border-radius: 8px 8px 0 0;
+    padding: 0 8px;
+}
+.tab-current{
+
+}
+.tab-content{
+    width: 100%;
+    height: 100%;
+    border: solid gray 1px;
 }
