--- a/checkman3/src/main/web/css/application.css
+++ b/checkman3/src/main/web/css/application.css
@@ -52,3 +52,17 @@
     display: flex;
     flex-direction: row;
 }
+.item-container{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100%;
+    padding: 0 4px;
+}
+.list-item{
+    border: solid gray 1px;
+    border-radius: 4px;
+    margin: 4px 0;
+}
+.list-item:hover{
+    box-shadow: 4px 4px 4px gray;
+}
