--- a/spedition/untitled/src/main/webapp/css/main.css
+++ b/spedition/untitled/src/main/webapp/css/main.css
@@ -1,6 +1,7 @@
 *{
     user-select: none;
     font-family: 'Segoe UI', 'Roboto', arial, sans-serif;
+    -moz-user-select: none;
 }
 body{
     margin: 0;
