--- a/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
+++ b/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
@@ -16,7 +16,7 @@
     <item
         android:id="@+id/weight"
         android:icon="@drawable/ic_weight"
-        android:title="@string/addBaseWeight"
+        android:title="@string/ownWeight"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/done"
