--- a/spedition/SpeditionClient/app/src/main/res/values/colors.xml
+++ b/spedition/SpeditionClient/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="textColor">#373737</color>
     <color name="spinnerBackground">#323232</color>
+    <color name="gray">#6C6C6C</color>
 </resources>
