--- a/spedition/SpeditionClient/app/src/main/res/layout/activity_report_show.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/activity_report_show.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/driver"
+        android:text="@string/drivers"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
