--- a/spedition/SpeditionClient/app/src/main/res/layout/drivers_manage_dialog.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/drivers_manage_dialog.xml
@@ -19,8 +19,9 @@
 
     <ImageButton
         android:id="@+id/addNewDriver"
-        android:layout_width="50dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/ic_menu_add"
         app:layout_constraintBottom_toBottomOf="@+id/driverInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
