--- a/spedition/SpeditionClient/app/src/main/res/layout/report_detail_view.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/report_detail_view.xml
@@ -34,21 +34,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/removeItem" />
 
-    <Button
-        android:id="@+id/editWeightButton"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:text="@string/weight"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageButton
         android:id="@+id/driverEditButton"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/ic_menu_edit"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/editWeightButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_edit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
