more report fields dev

--- a/spedition/SpeditionClient/app/src/main/res/layout/tables_view.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/tables_view.xml
@@ -7,13 +7,11 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/wList"
+        android:id="@+id/tables_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </ListView>
-
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
